2003-11-13  Jackson Harper <jackson@ximian.com>

	* SessionInProcHandler.cs: Use AppDomain.SetData so data is
	available across all threads. Set the path of session id
	cookies. Patch by Mohammad DAMT. Fixes bug #50922.
	 
2003-11-06 Jackson Harper <jackson@ximian.com>

	* ISessionHandler.cs: Pass the SessionStateModule to handlers when
	updating.
	* SessionSqlServerHandler.cs:
	* SessionInProcHandler.cs: Accept SessionStateModule when
	updating. Use new SessionId.Create method for creating session
	ids.
	* SessionStateModule.cs: Add a random number generator that will
	be used for creating session ids. Pass this to handlers when
	updating.
	* SessionId.cs: New class for creating session ids.
	
2003-11-03 Jackson Harper <jackson@ximian.com>

	* HttpSessionState.cs (CopyTo): Copy values not keys. Patch by Yaron Shkop.
	
2003-11-03 Jackson Harper <jackson@ximian.com>

	* HttpSessionState.cs: Make the SessionDictionary accessable
	* ISessionHandler.cs: Add method to update the session state
	data in the handler. Pass the session config to handlers when
	initializing.
	* SessionConfig.cs: Add StateNetworkTimeout
	* SessionInProcHandler.cs: Updates because interface has
	changed, all functionality is the same.
	* SessionStateModule.cs: Get new config items, allow SQLServer
	session manager type. Update session handlers when the session
	state has been released.
	* SessionStateSectionHandler.cs: Add StateNetworkTimeout
	* SessionSQLServerHandler.cs: New class allows sessions to be
	stored in a database.
	
2003-10-28 Jackson Harper <jackson@ximian.com>

	* HttpSessionState.cs: Do not allow timeout to be set to less then
	one.
	
2003-10-28 Jackson Harper <jackson@ximian.com>

	* SessionInProcHandler.cs: Compute timeouts
	correctly. DateTime.Milliseconds is the just the milliseconds part
	of the time, it is not the entire time as milliseconds.
	
2003-10-13 Ben Maurer  <bmaurer@users.sourceforge.net>

	* SessionStateModule.cs: prevent Context.State from being null if